tests seems to be passing now